what i do 부분 완성성

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ main button.download {
   margin-top: 3rem;
   color: white;
   font-weight: bold;
-  cursor: point;
+  cursor: pointer;
 }
 main button.mouse {
   background-color: transparent;
