커밋 메시지 중복 문제 해결을 위한 커밋밋

--- a/css/about_me.css
+++ b/css/about_me.css
@@ -2,9 +2,9 @@ section .about-self .left {
   float: left;
   width: 50%;
 }
-section .about-self .left img {
+/* section .about-self .left img {
   width: 100%;
-}
+} */
 section .about-self .right {
   width: 50%;
   float: left;
